[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/icons/calendar.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PT-Bold_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/textures/icons/all_season.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/icons/spring.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/PT-Regular_16_Button.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/interfaces/Fields/ComplexField.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/textures/icons/summer.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/icons/automn.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/icons/winter.png" type="Texture" id=9]
[ext_resource path="res://src/interfaces/Fields/child/SeasonsField.gd" type="Script" id=10]

[node name="SeasonsField" instance=ExtResource( 6 )]
rect_min_size = Vector2( 312, 0 )
script = ExtResource( 10 )
field_nodepath = NodePath("HBoxContainer2/SelectButton")

[node name="SelectButton" type="Button" parent="HBoxContainer2" index="1"]
margin_left = 4.0
margin_right = 1920.0
margin_bottom = 36.0
rect_min_size = Vector2( 134, 36 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "- Sélectionner -"
align = 0

[node name="PopupPanel" type="PopupPanel" parent="HBoxContainer2/SelectButton" index="0"]
show_behind_parent = true
margin_top = 26.0
margin_right = 1920.0
margin_bottom = 518.0
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2/SelectButton/PopupPanel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/margin_right = 18
custom_constants/margin_top = 16
custom_constants/margin_left = 18
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer" index="0"]
margin_left = 18.0
margin_top = 16.0
margin_right = 1886.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="0" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="0" groups=["season_button"]]
margin_right = 1868.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "Toute saison"
icon = ExtResource( 3 )

[node name="HSeparator" type="HSeparator" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="1"]
margin_top = 50.0
margin_right = 1868.0
margin_bottom = 54.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="2"]
margin_top = 60.0
margin_right = 1868.0
margin_bottom = 142.0

[node name="1" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer" index="0" groups=["season_button"]]
margin_right = 1868.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "Printemps"
icon = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer" index="1"]
margin_top = 48.0
margin_right = 1868.0
margin_bottom = 82.0

[node name="2" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="0" groups=["season_button"]]
margin_right = 620.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Mars"

[node name="3" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="1" groups=["season_button"]]
margin_left = 624.0
margin_right = 1244.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Avril"

[node name="4" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="2" groups=["season_button"]]
margin_left = 1248.0
margin_right = 1868.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Mai"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="3"]
margin_top = 148.0
margin_right = 1868.0
margin_bottom = 152.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="4"]
margin_top = 158.0
margin_right = 1868.0
margin_bottom = 240.0

[node name="5" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer2" index="0" groups=["season_button"]]
margin_right = 1868.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "Été"
icon = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer2" index="1"]
margin_top = 48.0
margin_right = 1868.0
margin_bottom = 82.0

[node name="6" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="0" groups=["season_button"]]
margin_right = 620.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Juin"

[node name="7" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="1" groups=["season_button"]]
margin_left = 624.0
margin_right = 1244.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Juillet"

[node name="8" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer" index="2" groups=["season_button"]]
margin_left = 1248.0
margin_right = 1868.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Août"

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="5"]
margin_top = 246.0
margin_right = 1868.0
margin_bottom = 250.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="6"]
margin_top = 256.0
margin_right = 1868.0
margin_bottom = 338.0

[node name="9" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer3" index="0" groups=["season_button"]]
margin_right = 1868.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "Automne"
icon = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer3" index="1"]
margin_top = 48.0
margin_right = 1868.0
margin_bottom = 82.0

[node name="10" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer" index="0" groups=["season_button"]]
margin_right = 620.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Septembre"

[node name="11" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer" index="1" groups=["season_button"]]
margin_left = 624.0
margin_right = 1244.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Octobre"

[node name="12" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer" index="2" groups=["season_button"]]
margin_left = 1248.0
margin_right = 1868.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Novembre"

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="7"]
margin_top = 344.0
margin_right = 1868.0
margin_bottom = 348.0

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer" index="8"]
margin_top = 354.0
margin_right = 1868.0
margin_bottom = 436.0

[node name="13" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer4" index="0" groups=["season_button"]]
margin_right = 1868.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "Hiver"
icon = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer4" index="1"]
margin_top = 48.0
margin_right = 1868.0
margin_bottom = 82.0

[node name="14" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer" index="0" groups=["season_button"]]
margin_right = 620.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Décembre"

[node name="15" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer" index="1" groups=["season_button"]]
margin_left = 624.0
margin_right = 1244.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Janvier"

[node name="16" type="Button" parent="HBoxContainer2/SelectButton/PopupPanel/MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer" index="2" groups=["season_button"]]
margin_left = 1248.0
margin_right = 1868.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Février"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer2/SelectButton" index="1"]
modulate = Color( 0.764706, 0.764706, 0.764706, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -7.0
margin_right = -10.0
margin_bottom = 7.0
rect_min_size = Vector2( 14, 14 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_exited" from="HBoxContainer2/SelectButton" to="." method="_on_SelectButton_focus_exited"]
[connection signal="pressed" from="HBoxContainer2/SelectButton" to="." method="_on_SelectButton_pressed"]
